status working. docs done
