# module/Status/src/V1/Rpc/Ping/PingController.php
@@ -1,18 +1,4 @@
 <?php
-/**
- * PingController.php - Ping Controller
- *
- * Main Controller for Status Ping
- *
- * @category Controller
- * @package Status
- * @author Praesidiarius
- * @copyright (C) 2021 Praesidiarius <admin@1plc.ch>
- * @license https://opensource.org/licenses/BSD-3-Clause
- * @version 1.1.0
- * @since 1.1.0
- */
-
 namespace Status\V1\Rpc\Ping;
 
 use Laminas\Mvc\Controller\AbstractActionController;
@@ -20,12 +6,6 @@ use Laminas\ApiTools\ContentNegotiation\ViewModel;
 
 class PingController extends AbstractActionController
 {
-    /**
-     * Check if API is up and running
-     *
-     * @return ViewModel
-     * @since 1.1.0
-     */
     public function pingAction()
     {
         return new ViewModel([
