# swagger.json
@@ -1,103 +1,327 @@
 {
   "swagger": "2.0",
   "info": {
-    "description": "This is the onePlace XI API Core Server. You can find out more about onePlace at [https://oneplace.io](https://oneplace.io). For this example you can use `special-key` to test the authorization filters.",
-    "version": "1.1.0",
-    "title": "onePlace XI Core",
-    "termsOfService": "https://oneplace.io/terms/",
-    "contact": {
-      "email": "api-admin@oneplace.io"
-    },
-    "license": {
-      "name": "Apache 2.0",
-      "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
-    }
+    "title": "Status",
+    "version": "1"
   },
-  "host": "v2.api.swissfaucet.io",
-  "basePath": "/",
   "tags": [
     {
       "name": "Status",
-      "description": "Basic Status Operations"
+      "description": "Create, manipulate, and retrieve status messages."
+    },
+    {
+      "name": "Ping"
     }
   ],
-  "schemes": [
-    "https",
-    "http"
-  ],
   "paths": {
-    "/ping": {
+    "/status": {
       "get": {
         "tags": [
           "Status"
         ],
-        "summary": "Ping API to see if its up and running",
-        "description": "",
-        "operationId": "getUserByName",
+        "description": "Retrieve a paginated list of status messages.",
         "produces": [
-          "application/json",
-          "application/xml"
+          "application/vnd.status.v1+json",
+          "application/hal+json",
+          "application/json"
         ],
         "responses": {
+          "406": {
+            "description": "Not Acceptable"
+          },
+          "415": {
+            "description": "Unsupported Media Type"
+          },
           "200": {
-            "description": "successful operation",
+            "description": "OK"
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Status"
+        ],
+        "description": "Create a new status messages.",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
             "schema": {
-              "$ref": "#/definitions/Ping"
+              "$ref": "#/definitions/Status"
             }
+          }
+        ],
+        "produces": [
+          "application/vnd.status.v1+json",
+          "application/hal+json",
+          "application/json"
+        ],
+        "responses": {
+          "406": {
+            "description": "Not Acceptable"
+          },
+          "415": {
+            "description": "Unsupported Media Type"
+          },
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Client Error"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
+    "/status/{status_id}": {
+      "get": {
+        "tags": [
+          "Status"
+        ],
+        "description": "Retrieve a status message.",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "status_id",
+            "description": "URL parameter status_id",
+            "type": "string",
+            "required": true,
+            "minimum": 0,
+            "maximum": 1
+          }
+        ],
+        "produces": [
+          "application/vnd.status.v1+json",
+          "application/hal+json",
+          "application/json"
+        ],
+        "responses": {
+          "406": {
+            "description": "Not Acceptable"
+          },
+          "415": {
+            "description": "Unsupported Media Type"
+          },
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "Status"
+        ],
+        "description": "Update a status message.",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "status_id",
+            "description": "URL parameter status_id",
+            "type": "string",
+            "required": true,
+            "minimum": 0,
+            "maximum": 1
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        ],
+        "produces": [
+          "application/vnd.status.v1+json",
+          "application/hal+json",
+          "application/json"
+        ],
+        "responses": {
+          "406": {
+            "description": "Not Acceptable"
+          },
+          "415": {
+            "description": "Unsupported Media Type"
+          },
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "400": {
+            "description": "Client Error"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      },
+      "put": {
+        "tags": [
+          "Status"
+        ],
+        "description": "Replace a status message.",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "status_id",
+            "description": "URL parameter status_id",
+            "type": "string",
+            "required": true,
+            "minimum": 0,
+            "maximum": 1
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/Status"
+            }
+          }
+        ],
+        "produces": [
+          "application/vnd.status.v1+json",
+          "application/hal+json",
+          "application/json"
+        ],
+        "responses": {
+          "406": {
+            "description": "Not Acceptable"
+          },
+          "415": {
+            "description": "Unsupported Media Type"
+          },
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "400": {
+            "description": "Client Error"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Status"
+        ],
+        "description": "Delete a status message.",
+        "parameters": [
+          {
+            "in": "path",
+            "name": "status_id",
+            "description": "URL parameter status_id",
+            "type": "string",
+            "required": true,
+            "minimum": 0,
+            "maximum": 1
+          }
+        ],
+        "produces": [
+          "application/vnd.status.v1+json",
+          "application/hal+json",
+          "application/json"
+        ],
+        "responses": {
+          "406": {
+            "description": "Not Acceptable"
+          },
+          "415": {
+            "description": "Unsupported Media Type"
+          },
+          "204": {
+            "description": "No Content"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
+    "/ping": {
+      "get": {
+        "tags": [
+          "Ping"
+        ],
+        "produces": [
+          "application/vnd.status.v1+json",
+          "application/json",
+          "application/*+json"
+        ],
+        "responses": {
+          "406": {
+            "description": "Not Acceptable"
+          },
+          "415": {
+            "description": "Unsupported Media Type"
+          },
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
           }
         }
       }
     }
   },
-  "securityDefinitions": {
-    "api_key": {
-      "type": "apiKey",
-      "name": "api_key",
-      "in": "header"
-    },
-    "petstore_auth": {
-      "type": "oauth2",
-      "authorizationUrl": "https://petstore.swagger.io/oauth/authorize",
-      "flow": "implicit",
-      "scopes": {
-        "read:pets": "read your pets",
-        "write:pets": "modify pets in your account"
-      }
-    }
-  },
   "definitions": {
-    "ApiResponse": {
+    "Status": {
       "type": "object",
       "properties": {
-        "code": {
-          "type": "integer",
-          "format": "int32"
-        },
-        "type": {
-          "type": "string"
-        },
         "message": {
-          "type": "string"
-        }
-      }
-    },
-    "Ping": {
-      "type": "object",
-      "properties": {
-        "ack": {
-          "type": "integer",
-          "format": "int32",
-          "default": 1619754239,
-          "description": "timestamp"
+          "type": "string",
+          "description": "A status message of no more than 140 characters"
+        },
+        "user": {
+          "type": "string",
+          "description": "The user submitting the status message."
+        },
+        "timestamp": {
+          "type": "string",
+          "description": "The timestamp when the status message was last modified."
         }
       },
-      "xml": {
-        "name": "Ping"
-      }
+      "required": [
+        "message",
+        "user"
+      ]
     }
-  },
-  "externalDocs": {
-    "description": "Find out more about oneplace",
-    "url": "http://oneplace.io"
   }
 }
